@startuml

title M30 RTOS MESSAGES \n BETWEEN APPLICATIONS LAYER AND DOMAIN MODELS LAYER

skinparam packageStyle rectangle
skinparam lineThickness 2

'------------------------------------------------------------------------------------------------
'                           APPLICATIONS LAYER 
'------------------------------------------------------------------------------------------------

package "Applications Layer" #ff8
{
    class ApplicationsTask {}
} 

class Types
{
    enum class EJoystickId { Player1, Player2 }
    enum class EJoystickDirection { Centered, Up, UpRight, Right, DownRight, Down, DownLeft, Left, UpLeft }
    enum class ELedId { Player1, Player2, PlayPause, Select, Setup }
    enum class ETm1637Id { CentralPanel, Player, Player 2 }
}

class LedStripsQueue <<queue>> 
{
    + Pixel(int horizontal, int vertical, RGB color)
    + Row(int row, RGB color)
    + Column(int column, RGB color)
    + Orientation(EOrientation orientation)
    + SyncToDriver()
}

class I2cOutputQueue <<queue>> 
{
}

struct OutputQueue_OutputMessage
{
    + enum class EType { Led, Lcd2004Line }
    + EType type
}

struct lcd2004Line 
{
    + uint8_t lineNumber
    + char lineContent[Lcd2004::LINE_WIDTH]
}

struct led
{
    + Types::ELedId ledId
    + bool state
}

struct tm1637Value
{
    Types::ETm1637Id tm1637Id
    uint32_t value
} 

struct tm1637Time
{
    Types::ETm1637Id tm1637Id
    uint8_t first
    uint8_t second
}

OutputQueue_OutputMessage *-- led : union
OutputQueue_OutputMessage *-- lcd2004Line : union
OutputQueue_OutputMessage *-- tm1637Value : union
OutputQueue_OutputMessage *-- tm1637Time : union

I2cOutputQueue o-- OutputQueue_OutputMessage : type only

class I2cInputQueue <<queue>> 
{
}

ApplicationsTask --> LedStripsQueue
ApplicationsTask --> I2cOutputQueue
ApplicationsTask <-- I2cInputQueue

struct InputQueue_InputMessage
{
    + enum class EType { JoystickDirection, JoystickButton, SystemButton }
    + EType type
}

I2cInputQueue o-- InputQueue_InputMessage: type only

OutputQueue_OutputMessage ...> Types
InputQueue_InputMessage ...> Types

class QueueProcessor <<M30_Messages>> <<abstract>>
{
    + QueueProcessor()
    - GetQueue() : Queue&
    + SetQueue(Queue& queue)
    - Queue* _queue
}

struct joystickDirection
{
    EJoystickId joystickId
    EJoystickDirection direction
}

struct joystickButton
{
    EJoystickId id
    bool pressed
} 

struct systemButton
{
    bool pressed
} 

InputQueue_InputMessage *-- joystickDirection
InputQueue_InputMessage *-- joystickButton
InputQueue_InputMessage *-- systemButton

package "Domain Models Layer" as DomainModelsLayer #fc8
{
    class I2cTask <<I2cTask>> #yellow
    class LedStripsTask <<LedStripTask>> #lightblue
}

LedStripsQueue --> LedStripsTask
I2cOutputQueue --> I2cTask
I2cInputQueue <-- I2cTask

class DiagnosticsTask <<M00 Systems Layer>> #lightgrey
{
}

class DiagnosticsQueue <<queue>> 
{
    + DiagnosticsQueue()
    + ~DiagnosticsQueue()
    + Type { HeartBeat, TaskData, LogEntry }
}

DiagnosticsQueue --> DiagnosticsTask

class header 
{
    + TypesETaskId taskId
    + uint64_t timeStamp; 
}

class heartBeat
{
}

heartBeat *-- header

class taskData
{
    + uint64_t freeStackSize
}

taskData *-- header

class logEntry
{
    + Types::ELogLevel logLevel
    + char text[DiagnosticsQueue::MAX_LOG_ENTRY_TEXT_LENGTH]
}

logEntry *-- header

DiagnosticsQueue o-- heartBeat : type only
DiagnosticsQueue o-- taskData : type only

@enduml


        EType type;

   



            struct
            {
                Header header;
                uint64_t stackSize;
            } taskData;

            struct 
            {
                Header header;
                Types::ELogLevel logLevel;
                char text[DiagnosticsQueue::MAX_LOG_ENTRY_TEXT_LENGTH]; // NOSONAR: No std::string in queue
            } logEntry;
        };
    };

    constexpr static uint32_t MESSAGE_QUEUE_LENGTH = 1000;
    constexpr static uint32_t MESSAGE_QUEUE_ITEM_SIZE = sizeof(Message);    
};
